--- a/BugShooting.Output.Ftp/Edit.xaml
+++ b/BugShooting.Output.Ftp/Edit.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="BS.Output.Ftp.Edit"
+﻿<Window x:Class="BugShooting.Output.Ftp.Edit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-        xmlns:local="clr-namespace:BS.Output.Ftp"
+        xmlns:local="clr-namespace:BugShooting.Output.Ftp"
         x:ClassModifier="internal"
         mc:Ignorable="d" 
         Title="FTP"
